--- a/style.css
+++ b/style.css
@@ -7,26 +7,30 @@ html,
 body {
     font-family: sans-serif;
     letter-spacing: 1px;
-    background-color: #e1e1e1;
+    background-color: #1b1b1b;
+    line-height: 1.5;
+    color: #c9c9c9;
 }
 
-h1 {
-    text-align: center;
-    font-size: 25px;
-    margin-bottom: 32px;
-    padding-top: 32px;
-}
 
 .container {
     max-width: 1250px;
     padding: 15px;
-    margin: 0 auto;
+    margin: 32px auto;
 }
 
-ul {
-    margin: 32px 0;
+p {
+    font-weight: bold;
+    padding: 32px;
+    border-radius: 10px;
+    box-shadow: 0 4px 16px #333;
 }
 
-li {
-    margin: 10px 0;
+.func {
+    padding: 32px;
+    border-radius: 10px;
+    box-shadow: 0 4px 16px #333;
+    display: inline-block;
+    margin-bottom: 32px;
+
 }
